# kimai-ml

./: .dockerignore  Cargo.toml  DOCKER_BUILD.md  Dockerfile  LICENSE  build.rs
proto/: ml.proto
src/: grpc_server.rs  lib.rs  main.rs
src/models/: anomaly_detection.rs  forecasting.rs  learning.rs  productivity.rs  recommendations.rs
src/preprocessing/: feature_engineering.rs  mod.rs  normalization.rs
