[package]
name = "kimai-ml"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Zorin <creator@localzet.com>"]
description = "ML models for Kimai Aggregator (Rust version)"
license = "AGPL-3.0"
repository = "https://github.com/localzet/kimai-ml-rust"
homepage = "https://github.com/localzet"

[lib]
name = "kimai_ml"
crate-type = ["cdylib", "rlib"]

[dependencies]
# ML библиотеки
ndarray = "0.15"
# Используем самописные реализации вместо linfa (более надежно)

# Сериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# API сервер
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Утилиты
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Логирование
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# gRPC
tonic = { version = "0.8", features = ["transport"] }
prost = "0.11"
# Use rustls TLS feature for reqwest
reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"] }

# WASM (опционально, для Electron)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys"]

[dev-dependencies]
# wasm-bindgen-test можно добавить позже если нужны WASM тесты

[build-dependencies]
tonic-build = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

